--- a/i2f-model/pom.xml
+++ b/i2f-model/pom.xml
@@ -18,6 +18,14 @@
         </dependency>
 
         <dependency>
+            <groupId>i2f.boost</groupId>
+            <artifactId>i2f-core</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/../lib/i2f-core-1.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
