--- a/i2f-svc/src/main/resources/application.yml
+++ b/i2f-svc/src/main/resources/application.yml
@@ -67,8 +67,8 @@ spring:
 mybatis:
   mapper-locations:
     - classpath*:/mapper/**/*.xml
-    - classpath*:**/mapper/xml/*Mapper.xml
-    - classpath*:**/dao/xml/*Mapper.xml
+    - classpath*:com/i2f/**/mapper/xml/*Mapper.xml
+    - classpath*:com/i2f/**/dao/xml/*Mapper.xml
   configuration:
     log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
     call-setters-on-nulls: true
