--- a/i2f-svc/src/main/resources/application-dev.yml
+++ b/i2f-svc/src/main/resources/application-dev.yml
@@ -3,6 +3,7 @@ server:
   # 端口配置
   port: 8080
 
+
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/i2f_proj?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
@@ -31,6 +32,8 @@ spring:
 
 i2f:
   springboot:
+    file:
+      downloadHost: localhost
     config:
       # 多数据源配置
       datasource:
