--- a/i2f-web/package.json
+++ b/i2f-web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@kangc/v-md-editor": "^2.3.15",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.3.4",
     "compression-webpack-plugin": "^5.0.1",
