--- a/i2f-web/.env.dev
+++ b/i2f-web/.env.dev
@@ -6,3 +6,5 @@ NODE_ENV='dev'
 # 防止导出意外的变量，导致信息泄露
 VUE_APP_PORT=11024
 VUE_APP_BASE_URL='http://localhost:8080/'
+#VUE_APP_PORT=21024
+#VUE_APP_BASE_URL='http://39.105.33.11:31024/'
