--- a/i2f-web/package.json
+++ b/i2f-web/package.json
@@ -19,6 +19,7 @@
     "compression-webpack-plugin": "^5.0.1",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
+    "echarts": "^5.4.2",
     "js-base64": "^3.6.1",
     "js-cookie": "2.2.1",
     "mathjs": "^11.7.0",
