--- a/i2f-framework/pom.xml
+++ b/i2f-framework/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.i2f</groupId>
             <artifactId>i2f-api</artifactId>
         </dependency>
