--- a/i2f-app/.env.prod
+++ b/i2f-app/.env.prod
@@ -4,5 +4,5 @@ NODE_ENV='prod'
 # 其他变量只能是以VUE_APP_为前缀的变量
 # 这是为了安全考虑的约定，只有这个前缀的变量才会被导出
 # 防止导出意外的变量，导致信息泄露
-VUE_APP_PORT=21024
-VUE_APP_BASE_URL='http://localhost:8080/'
+VUE_APP_PORT=22048
+VUE_APP_BASE_URL='http://39.105.33.11:31024/'
