--- a/i2f-ui/package.json
+++ b/i2f-ui/package.json
@@ -9,6 +9,8 @@
     "build:dev": "vue-cli-service build --mode dev",
     "build:test": "vue-cli-service build --mode test",
     "build:prod": "vue-cli-service build --mode prod",
+    "build:gzip": "vue-cli-service build --mode prod --gzip",
+    "build:report": "vue-cli-service build --mode prod --report",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -40,7 +42,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "lint-staged": "^11.1.2",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack-bundle-analyzer": "^4.9.0"
   },
   "eslintConfig": {
     "root": true,
