--- a/i2f-app/package.json
+++ b/i2f-app/package.json
@@ -14,6 +14,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "axios": "^1.3.4",
     "compression-webpack-plugin": "^5.0.1",
     "core-js": "^3.8.3",
