--- a/i2f-ui/package.json
+++ b/i2f-ui/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.1.1",
     "js-base64": "^3.6.1",
     "js-cookie": "2.2.1",
+    "jsrsasign": "^10.8.6",
     "mathjs": "^11.7.0",
     "moment": "^2.29.4",
     "qs": "^6.11.1",
