--- a/i2f-web/package.json
+++ b/i2f-web/package.json
@@ -24,6 +24,7 @@
     "echarts": "^5.4.2",
     "js-base64": "^3.6.1",
     "js-cookie": "2.2.1",
+    "jsrsasign": "^10.8.6",
     "katex": "^0.11.1",
     "mathjs": "^11.7.0",
     "mermaid": "^10.3.0",
