--- a/i2f-ui/.env.prod
+++ b/i2f-ui/.env.prod
@@ -5,4 +5,4 @@ NODE_ENV='prod'
 # 这是为了安全考虑的约定，只有这个前缀的变量才会被导出
 # 防止导出意外的变量，导致信息泄露
 VUE_APP_PORT=80
-VUE_APP_BASE_URL='http://localhost:8080/'
+VUE_APP_BASE_URL='http://39.105.33.11:31024/'
