--- a/i2f-ui/package.json
+++ b/i2f-ui/package.json
@@ -44,8 +44,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "javascript-obfuscator": "^4.0.2",
     "lint-staged": "^11.1.2",
-    "webpack-bundle-analyzer": "^4.9.0"
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-obfuscator": "^3.5.1"
   },
   "eslintConfig": {
     "root": true,
