web global progress

--- a/i2f-ui/package.json
+++ b/i2f-ui/package.json
@@ -23,6 +23,7 @@
     "jsrsasign": "^10.8.6",
     "mathjs": "^11.7.0",
     "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "qs": "^6.11.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
