--- a/i2f-app/package.json
+++ b/i2f-app/package.json
@@ -24,6 +24,7 @@
     "jsrsasign": "^10.8.6",
     "mathjs": "^11.7.0",
     "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "qs": "^6.11.1",
     "vant": "^4.6.4",
     "vue": "^3.2.13",
