--- a/i2f-web/package.json
+++ b/i2f-web/package.json
@@ -29,6 +29,7 @@
     "mathjs": "^11.7.0",
     "mermaid": "^10.3.0",
     "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "qs": "^6.11.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
