--- a/i2f-web/package.json
+++ b/i2f-web/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@kangc/v-md-editor": "^2.3.15",
+    "@videojs-player/vue": "^1.0.0",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.3.4",
     "compression-webpack-plugin": "^5.0.1",
@@ -25,13 +26,14 @@
     "js-base64": "^3.6.1",
     "js-cookie": "2.2.1",
     "jsrsasign": "^10.8.6",
-    "sm-crypto": "^0.3.12",
     "katex": "^0.11.1",
     "mathjs": "^11.7.0",
     "mermaid": "^10.3.0",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "qs": "^6.11.1",
+    "sm-crypto": "^0.3.12",
+    "video.js": "^8.5.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
