online live verify

--- a/i2f-svc/src/main/resources/application.yml
+++ b/i2f-svc/src/main/resources/application.yml
@@ -143,6 +143,7 @@ i2f:
           bothPattens:
             - /api/sys/file/**
             - /secure/key
+            - /api/rtmp/**
           # 进站忽略的列表清单
           inPattens:
             - /api/sys/file/upload/**
