--- a/i2f-web/package.json
+++ b/i2f-web/package.json
@@ -31,6 +31,7 @@
     "mermaid": "^10.3.0",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.3",
     "qs": "^6.11.1",
     "sm-crypto": "^0.3.12",
     "video.js": "^8.5.2",
